recursion.lessons.recursion.koch.Koch.scala.error
Koch:16: error: not found: value snowflake
	snowflake(levels,length)
        ^